dark mode fix

--- a/src/styles/components/_rubric-menu.scss
+++ b/src/styles/components/_rubric-menu.scss
@@ -106,11 +106,15 @@
   }
 
   &--dark {
+    .ant-input-affix-wrapper {
+      background-color: #18191b !important;
+    }
+
     .ant-input-group-addon {
       background-color: #323435 !important;
     }
     input {
-      background-color: #18191b;
+      background-color: #18191b !important;
       color: rgba(255, 255, 255, 0.9);
     }
   }
